<resources>
    <string name="app_name">SpeechAssistant</string>
    <string name="you_write_and_say">You write and say</string>
    <string name="tell_me_write">You tell me to write</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have any account？</string>
    <string name="register_here">Register Here</string>
    <string name="github">Github</string>
    <string name="wechat">Wechat</string>
    <string name="mobile">Mobile</string>
    <string name="write">Write</string>
    <string name="say">Say</string>
    <string name="favors">Favors</string>
    <string name="me">Me</string>
    <string name="content">Content...</string>
    <string name="recent">Recent</string>
    <string name="view_all">View All</string>
    <string name="listening">Listening ...</string>
    <string name="visitor">Visitor</string>
    <string name="voices">Voices</string>
    <string name="texts">Texts</string>
    <string name="personal_information">Personal Information</string>
    <string name="nickname">Nickname</string>
    <string name="tel">Tel.</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="signature">Signature</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="clean_data">Clean Data</string>
    <string name="logout">Logout</string>
    <string name="detail">Detail</string>
    <string name="information">Informations</string>
    <string name="rate">Rate:</string>
    <string name="name">Name:</string>
    <string name="volume">Volume:</string>
    <string name="duration">Duration:</string>
    <string name="view">View</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="text">Text:</string>
    <string name="voice">Voice:</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="waiting">Waiting...</string>
    <string name="back">Back</string>
</resources>