<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">
        <TextView
            android:id="@+id/write_and_say"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/you_write_and_say"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:layout_marginTop="120dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/write_and_say"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/tell_me_write"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/login_account"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/login_edit_shape"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableStart="@drawable/account"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:hint="@string/username"
            android:textColor="#D8D8D8"
            android:textColorHint="#D8D8D8"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints="@string/username"
            tools:ignore="RtlSymmetry"
            android:inputType="textVisiblePassword" />

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/login_edit_shape"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/login_account"
            android:hint="@string/password"
            android:textColor="#D8D8D8"
            android:textColorHint="#D8D8D8"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="@string/password"
            android:inputType="textVisiblePassword" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_pwd"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:textColor="#007AFF"
            android:textSize="18sp"
            android:text="@string/forget_password"
            android:fontFamily="SFProDisplay-Regular"
            android:alpha="1"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password"
            android:layout_marginTop="45dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:background="@drawable/login_btn_shape"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffFFFFFF"
                android:textSize="14sp"
                android:lineSpacingExtra="0.2sp"
                android:fontFamily="SFProDisplay-Regular"
                android:alpha="1"
                android:text="@string/don_t_have_account"/>

            <TextView
                android:id="@+id/register_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff007AFF"
                android:textSize="14sp"
                android:lineSpacingExtra="0.2sp"
                android:fontFamily="SFProDisplay-Regular"
                android:alpha="1"
                android:text="@string/register_here"/>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/github"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="50dp"
                android:drawablePadding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/white"
                android:text="@string/github"/>

            <TextView
                android:id="@+id/wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/wechat"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                android:text="@string/wechat"/>

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/mobile"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                android:text="@string/mobile"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/mask_layout"
        android:visibility="gone"
        layout="@layout/waiting_mask"/>
</FrameLayout>