<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:alpha="1"
            android:fontFamily="SFProDisplay-Bold"
            android:lineSpacingExtra="0.2sp"
            android:shadowColor="#40000000"
            android:shadowDx="0"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/register"
            android:textColor="#ffFFFFFF"
            android:textSize="34sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="250dp"
            android:layout_marginRight="20dp"
            android:autofillHints="@string/username"
            android:background="@drawable/login_edit_shape"
            android:drawableStart="@drawable/account"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:inputType="textVisiblePassword"
            android:paddingStart="10dp"
            android:textColor="#D8D8D8"
            android:textColorHint="#D8D8D8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/register_pwd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="20dp"
            android:autofillHints="@string/password"
            android:background="@drawable/login_edit_shape"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textVisiblePassword"
            android:paddingStart="10dp"
            android:textColor="#D8D8D8"
            android:textColorHint="#D8D8D8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_account"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/register_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="20dp"
            android:autofillHints="@string/confirm_password"
            android:background="@drawable/login_edit_shape"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textVisiblePassword"
            android:paddingStart="10dp"
            android:textColor="#D8D8D8"
            android:textColorHint="#D8D8D8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_pwd"
            tools:ignore="RtlSymmetry" />


        <Button
            android:id="@+id/btn_sure"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="120dp"
            android:background="@drawable/login_btn_shape"
            android:text="@string/sure"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="parent" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/login_btn_shape"
            android:text="@string/back"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/mask_layout"
        layout="@layout/waiting_mask"
        android:visibility="gone" />

</FrameLayout>