<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/indicator"
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/head_indicator"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/detail_bg">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textColor="#ff141414"
            android:textSize="25sp"
            android:lineSpacingExtra="5sp"
            android:fontFamily="SFProDisplay-Bold"
            android:alpha="1"
            android:text="@string/detail"/>

        <TextView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/detail_title"
            app:layout_constraintTop_toBottomOf="@+id/detail_title"
            android:layout_marginTop="30dp"
            android:textColor="#ff141414"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/information"
            android:drawablePadding="7dp"
            app:drawableLeftCompat="@drawable/ic_info" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/info_title"
                app:layout_constraintTop_toBottomOf="@+id/info_title"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff141414"
                    android:textSize="16sp"
                    android:lineSpacingExtra="-1.8sp"
                    android:fontFamily="SFProDisplay-Semibold"
                    android:alpha="1"
                    android:layout_marginStart="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/name"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff141414"
                    android:textSize="13sp"
                    android:lineSpacingExtra="6.2sp"
                    android:fontFamily="SFProDisplay-Regular"
                    app:layout_constraintTop_toTopOf="@+id/name_title"
                    app:layout_constraintBottom_toBottomOf="@+id/name_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="105dp"
                    android:gravity="top"
                    android:alpha="1"
                    android:text="xxxx"/>


                <TextView
                    android:id="@+id/volume_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff141414"
                    android:textSize="16sp"
                    android:lineSpacingExtra="-1.8sp"
                    android:fontFamily="SFProDisplay-Semibold"
                    android:alpha="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_title"
                    android:text="@string/volume"/>

                <TextView
                    android:id="@+id/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff141414"
                    android:textSize="13sp"
                    android:lineSpacingExtra="6.2sp"
                    android:fontFamily="SFProDisplay-Regular"
                    app:layout_constraintTop_toTopOf="@+id/volume_title"
                    app:layout_constraintBottom_toBottomOf="@+id/volume_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="105dp"
                    android:gravity="top"
                    android:alpha="1"
                    android:text="20%"/>

                <TextView
                    android:id="@+id/rate_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff141414"
                    android:textSize="16sp"
                    android:lineSpacingExtra="-1.8sp"
                    android:fontFamily="SFProDisplay-Semibold"
                    android:alpha="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/volume_title"
                    android:text="@string/rate"/>

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff141414"
                    android:textSize="13sp"
                    android:lineSpacingExtra="6.2sp"
                    android:fontFamily="SFProDisplay-Regular"
                    app:layout_constraintTop_toTopOf="@+id/rate_title"
                    app:layout_constraintBottom_toBottomOf="@+id/rate_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="105dp"
                    android:gravity="top"
                    android:alpha="1"
                    android:text="10%"/>


                <TextView
                    android:id="@+id/duration_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff141414"
                    android:textSize="16sp"
                    android:lineSpacingExtra="-1.8sp"
                    android:fontFamily="SFProDisplay-Semibold"
                    android:alpha="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rate_title"
                    android:text="@string/duration"/>

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff141414"
                    android:textSize="13sp"
                    android:lineSpacingExtra="6.2sp"
                    android:fontFamily="SFProDisplay-Regular"
                    app:layout_constraintTop_toTopOf="@+id/duration_title"
                    app:layout_constraintBottom_toBottomOf="@+id/duration_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="105dp"
                    android:gravity="top"
                    android:alpha="1"
                    android:text="00:05:12"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/info_line"
            android:layout_width="match_parent"
            android:layout_height="2px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_layout"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:background="#ffCDCDDF"/>

        <TextView
            android:id="@+id/view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/info_title"
            app:layout_constraintTop_toBottomOf="@+id/info_line"
            android:layout_marginTop="25dp"
            android:textColor="#ff141414"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/view"
            android:drawablePadding="7dp"
            app:drawableLeftCompat="@drawable/ic_view" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff141414"
            android:textSize="16sp"
            android:lineSpacingExtra="-1.8sp"
            android:fontFamily="SFProDisplay-Semibold"
            android:alpha="1"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="@+id/view_title"
            app:layout_constraintTop_toBottomOf="@+id/view_title"
            android:text="@string/text"/>

        <TextView
            android:id="@+id/voice_text"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:background="@drawable/text_bg"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textColor="#141414"
            android:layout_marginEnd="40dp"
            app:layout_constraintLeft_toLeftOf="@+id/text_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title"/>

        <TextView
            android:id="@+id/voice_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff141414"
            android:textSize="16sp"
            android:lineSpacingExtra="-1.8sp"
            android:fontFamily="SFProDisplay-Semibold"
            android:alpha="1"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="@+id/view_title"
            app:layout_constraintTop_toBottomOf="@+id/voice_text"
            android:text="@string/voice"/>

        <TextView
            android:id="@+id/voice_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff141414"
            android:textSize="13sp"
            android:lineSpacingExtra="6.2sp"
            android:fontFamily="SFProDisplay-Regular"
            app:layout_constraintTop_toTopOf="@+id/voice_title"
            app:layout_constraintBottom_toBottomOf="@+id/voice_title"
            app:layout_constraintLeft_toRightOf="@+id/voice_title"
            android:layout_marginStart="20dp"
            android:gravity="top"
            android:alpha="1"
            android:text="xxxxx.mp3"/>

        <View
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/voice_name"
            app:layout_constraintBottom_toBottomOf="@+id/voice_name"
            android:background="@drawable/ic_play"
            android:layout_marginEnd="40dp"/>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="2px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voice_title"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:background="#ffCDCDDF"/>

        <TextView
            android:id="@+id/share_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/info_title"
            app:layout_constraintTop_toBottomOf="@+id/view_line"
            android:layout_marginTop="25dp"
            android:textColor="#007AFF"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:drawablePadding="7dp"
            app:drawableLeftCompat="@drawable/ic_share" />

        <View
            android:id="@+id/share_line"
            android:layout_width="match_parent"
            android:layout_height="2px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_title"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:background="#ffCDCDDF"/>

        <TextView
            android:id="@+id/del_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/info_title"
            app:layout_constraintTop_toBottomOf="@+id/share_line"
            android:layout_marginTop="25dp"
            android:textColor="#007AFF"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/delete"
            android:drawablePadding="7dp"
            app:drawableLeftCompat="@drawable/ic_delete" />

        <View
            android:id="@+id/del_line"
            android:layout_width="match_parent"
            android:layout_height="2px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/del_title"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:background="#ffCDCDDF"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>